--- a/backend/.env
+++ b/backend/.env
@@ -9,7 +9,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=feeder_mysql
 DB_PORT=3306
 DB_DATABASE=local
 DB_USERNAME=root
@@ -22,11 +22,11 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-MEMCACHED_HOST=127.0.0.1
+MEMCACHED_HOST=feeder_redis
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=feeder_redis
 REDIS_PASSWORD=null
-REDIS_PORT=6379
+REDIS_PORT=6377
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailpit
